Remove redundant overflow-x property from body styles in FAQ Accordion

--- a/FAQ_Accordion/index.html
+++ b/FAQ_Accordion/index.html
@@ -44,7 +44,7 @@
           <span>Example:-</span>
           <pre>
             <code>
-const element = document.querySelector('.my-class'); // returns the first matching element
+const element = document.querySelector('.my-class');
             </code>
           </pre>
         </div>
